# SkITER

./: .gitignore  Cargo.toml  build.rs  compile.bat  compile.sh  compress_ressources.bat  compress_ressources.sh  uniffi.toml
java/: build.gradle
java/src/main/java/army/warfare/skiter/: DataLoadCallback.java  GfxLayer.java  Host.java  InternalPointerMarker.java  JNIReachabilityFence.java  KeyEvents.java  KeyboardStates.java  Library.java  LoadResult.java  Message.java  MouseButtons.java  MouseEvents.java  NativeFunctionInvocationCallback.java  Options.java  PaintLayer.java  Point.java  Sciter.java  SciterCallbacks.java
kotlin/: build.gradle  settings.gradle
kotlin/src/main/kotlin/army/warfare/skiter/: skiter.kt
resources/: sciter.dll.zs
src/: java_glue.rs.in  lib.rs  skiter.idl
src/army/warfare/skiter/: skiter.kt
src/bindings/: host.rs  library.rs  mod.rs  options.rs
