[package]
name = "skiter"
version = "0.1.0"
authors = ["niklasbuesing <totallygenericemail@protonmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "uniffi_skiter"
crate-type = ["cdylib"]

[dependencies]
sciter-rs = { version = "0.5.54", features = ["dynamic", "windowless"] }
anyhow = "1.0.37"
tempfile = "3.1.0"
zstd = "0.5.1"
uniffi = { path = "vendored/uniffi" }

[build-dependencies]
uniffi_build = { path = "vendored/uniffi_build" }
