cargo-features = ["strip"]

[package]
name = "skiter"
version = "0.1.0"
authors = ["niklasbuesing <totallygenericemail@protonmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "skiter"
crate-type = ["cdylib"]

[profile.release]
lto = "on"
panic = "abort"
strip = "symbols"

[dependencies]
sciter-rs = { git = "https://github.com/teamWARFARE/rust-sciter", features = ["dynamic", "windowless"] }
sciter-serde = { git = "https://github.com/teamWARFARE/rust-sciter" }
serde = { version = "1.0" }
serde_cbor = "0.11.1"
anyhow = "1.0.37"
tempfile = "3.1.0"
zstd = "0.5.1"
base64 = "0.13.0"
jni-sys = "0.3.0"
log = "0.4.6"
log-panics = "2.0"

[build-dependencies]
flapigen = { git = "https://github.com/Dushistov/flapigen-rs" }

[patch.crates-io]
sciter-rs = { git = "https://github.com/teamWARFARE/rust-sciter" }